update hw-13 & correct mistakes in math_cmds.tex & add an image to notes

--- a/HW/math_cmds.tex
+++ b/HW/math_cmds.tex
@@ -9,7 +9,7 @@
     \newcommand{\i}{\mathrm{i}}
 \fi
 \ifdefined\E
-    \renewcommand{\E}{\mathrm{E}}
+    \renewcommand{\E}{\mathbf{E}}
 \else
     \newcommand{\E}{\mathbf{E}}
 \fi
