--- a/math_cmds.tex
+++ b/math_cmds.tex
@@ -9,7 +9,7 @@
     \newcommand{\i}{\mathrm{i}}
 \fi
 \ifdefined\E
-    \renewcommand{\E}{\mathrm{E}}
+    \renewcommand{\E}{\mathbf{E}}
 \else
     \newcommand{\E}{\mathbf{E}}
 \fi
